syntax = "proto3";

service ChatbotService {
  // User
  rpc SendMessage (Message) returns (Message);

  rpc SendMessageAdvanced (Message) returns (AdvancedMessages);

  // Server manager
  rpc GetStatus (EmptyRequest) returns (Message);

  rpc StartHtmlExtraction (EmptyRequest) returns (Message);

  rpc StartContextExtraction (EmptyRequest) returns (Message);
}

message Message {
  string text = 1;
}

message AdvancedMessages{
  repeated AdvancedMessage otherMessages = 5;
}
message AdvancedMessage{
  string text = 1;
  string sourceUrl = 2;
  string context = 3;
  int32 relevancy = 4;
}

message EmptyRequest {}